[gd_scene load_steps=3 format=3 uid="uid://c525mub6rxvk8"]

[ext_resource type="Script" path="res://Game/SheetBuilder/measure.gd" id="1_e1l25"]
[ext_resource type="Script" path="res://Game/SheetBuilder/remap_note_button.gd" id="2_kb5uk"]

[node name="Measure" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_e1l25")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MeasureCountLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "1"

[node name="BeatHContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="RemapNoteButton" type="Button" parent="HBoxContainer/BeatHContainer"]
layout_mode = 2
text = "1"
script = ExtResource("2_kb5uk")

[node name="Button" type="Button" parent="HBoxContainer/BeatHContainer"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="HBoxContainer/BeatHContainer"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="HBoxContainer/BeatHContainer"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="HBoxContainer/BeatHContainer"]
layout_mode = 2
text = "4"

[node name="BeatHContainer2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/BeatHContainer2"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="HBoxContainer/BeatHContainer2"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="HBoxContainer/BeatHContainer2"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="HBoxContainer/BeatHContainer2"]
layout_mode = 2
text = "4"

[node name="BeatHContainer3" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/BeatHContainer3"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="HBoxContainer/BeatHContainer3"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="HBoxContainer/BeatHContainer3"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="HBoxContainer/BeatHContainer3"]
layout_mode = 2
text = "4"

[node name="BeatHContainer4" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/BeatHContainer4"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="HBoxContainer/BeatHContainer4"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="HBoxContainer/BeatHContainer4"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="HBoxContainer/BeatHContainer4"]
layout_mode = 2
text = "4"
